Modified different approaches